Pulir boones y presentacion

--- a/app/puntoDos.html
+++ b/app/puntoDos.html
@@ -16,10 +16,11 @@
         <!--Inicio del contenedor de la pagina-->
         <div class="container">
             <div class="col s12 card-panel ">
+                <h5>Taller de Aplicacion de JQuery para la electiva .NET</h5>
                 <br>
-                <a class="btn-large" href="../index.html">Home</a>
-                <a class="btn-large" href="puntoUno.html">Punto 1</a>
-                <a class="btn-large" href="PuntoDos.html">Punto 2</a>
+                <a class="btn-large" href="../index.html">Inicio</a>
+                <a class="btn-large" href="puntoUno.html">Calculadora de Salario</a>
+                <a class="btn-large" href="PuntoDos.html">Salario con IVA</a>
                 <br/>
                 <br/>
             </div>
