--- a/index.html
+++ b/index.html
@@ -18,8 +18,25 @@
             <div class="row">
                 <div class="col s12 card-panel grey lighten-3">
                     <h4>Bienvenido</h4>
-                    <a class="waves-effect waves-light btn-large" href="app/puntoUno.html">Punto 1</a>
-                    <a class="waves-effect waves-light btn-large" href="app/PuntoDos.html">Punto 2</a>
+                    <h5>Taller de Aplicacion de Jquery para la electiva .NET</h5>
+                    <h5>Universidad EAN</h5>
+                    <br>
+                    <br>
+                    <h5>Realizado por: </h5>
+                    <h5>Orlando Camilo Acosta </h5>
+                    <h5>Diego Miguel Moreno</h5>
+                    <br>
+                    <br>
+                    <br>
+                    <h5>Por favor, seleccione el punto a  Ejecutar</h5>
+                    <br>
+                    <br>
+                    <br>
+
+
+
+                    <a class="waves-effect waves-light btn-large" href="app/puntoUno.html">Calcular Salario</a>
+                    <a class="waves-effect waves-light btn-large" href="app/PuntoDos.html">Salario con IVA</a>
                     <br/>
                     <br/>
                 </div>
