Se realiza corecciones y mejoras en la interfaz

--- a/app/puntoDos.html
+++ b/app/puntoDos.html
@@ -17,6 +17,7 @@
         <div class="container">
             <div class="col s12 card-panel ">
                 <h5>Taller de Aplicacion de JQuery para la electiva .NET</h5>
+                <h5>Por Orlando Acosta y Diego Moreno</h5>
                 <br>
                 <a class="btn-large" href="../index.html">Inicio</a>
                 <a class="btn-large" href="puntoUno.html">Calculadora de Salario</a>
@@ -28,6 +29,7 @@
             <div class="row">
                 <div class="input-field col s3">
                     <input id="txtValor" type="text" class="validate" style="text-align: right;" onblur="calcularTotalIvaConDescuento(true);">
+                   
                     <label for="txtValor">Ingrese un valor</label>
                 </div>
                 <div class="input-field col s3" style="text-align: right;">
@@ -86,7 +88,7 @@
             </div>
             <div id="divBontonAceptar" class="row" style="display: none;">
                 <div class="input-field col s6" style="text-align: right;">
-                    <a class="waves-effect waves-light btn-large" onclick="calcularTotalIvaConDescuento(false);">Aceptar</a>
+                    <a class="waves-effect waves-light btn-large" onclick="calcularTotalIvaConDescuento(false);">Calcular</a>
                 </div>
             </div>
         </div>
