--- a/app/puntoUno.html
+++ b/app/puntoUno.html
@@ -18,11 +18,13 @@
             <div class="row">
                 <div class="col s12">
                     <div class="col s12 card-panel ">
-                        <br>
-                        <a class=" btn-large" href="../index.html">Home</a>
-                        <a class=" btn-large" href="puntoUno.html">Punto 1</a>
-                        <a class=" btn-large" href="PuntoDos.html">Punto 2</a>
-                        <br/>
+                        <h5>Taller de Aplicacion de JQuery para la electiva .NET</h5>
+                <h5>Por Orlando Acosta y Diego Moreno</h5>
+                <br>
+                <a class="btn-large" href="../index.html">Inicio</a>
+                <a class="btn-large" href="puntoUno.html">Calculadora de Salario</a>
+                <a class="btn-large" href="PuntoDos.html">Salario con IVA</a>
+                <br/>
                         <br/>
                     </div>
 
@@ -34,16 +36,16 @@
                         </div>
                         <div class="input-field col s4">
                             <input id="txtHoraEntrada" type="text" class="timepicker">
-                            <label for="txtHoraEntrada">Hora de entrada</label>
+                            <label for="txtHoraEntrada">A que horas entra?</label>
                         </div>
                         <div class="input-field col s4">
                             <input id="txtHoraSalida" type="text" class="timepicker">
-                            <label for="txtHoraSalida">Hora de salida</label>
+                            <label for="txtHoraSalida">Cuando Finaliza Turno?</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <label>Nivel riesgo profecionan</label>
+                            <label>Nivel de riesgo profesional</label>
                             <br/>
                             <br/>
                             <select id='ddlLetraClave' style="display: initial; background: transparent; border: 1px solid #9e9e9e;">
