--- a/app/puntoDos.html
+++ b/app/puntoDos.html
@@ -8,12 +8,12 @@
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
     <!--Deja que el navegador sepa que el sitio web está optimizado para dispositivos móviles-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Punto dos</title>
+    <title>2. Salario con IVA</title>
 </head>
 
 <body>
     <form>
-        <!--Inicio del contenedor de la pagina-->
+        
         <div class="container">
             <div class="col s12 card-panel ">
                 <h5>Taller de Aplicacion de JQuery para la electiva .NET</h5>
@@ -92,11 +92,11 @@
                 </div>
             </div>
         </div>
-        <!--Fin del contenedor de la pagina-->
+       
     </form>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--JavaScript al final del cuerpo para una carga optimizada-->
+
 <script type="text/javascript" src="../js/materialize.min.js"></script>
 <script type="text/javascript" src="../js/puntoDos.js"></script>
 
