--- a/app/puntoUno.html
+++ b/app/puntoUno.html
@@ -8,12 +8,12 @@
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
     <!--Deja que el navegador sepa que el sitio web está optimizado para dispositivos móviles-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Punto uno</title>
+    <title>1. Calcular Salario</title>
 </head>
 
 <body>
     <form>
-        <!--Inicio del contenido de la pagina-->
+       
         <div class="container">
             <div class="row">
                 <div class="col s12">
@@ -61,7 +61,7 @@
                     <div class="row">
                         <div class="input-field col s3" style="text-align: right;">
                             <label style="color: black;">
-                                <b>Salario mensual:</b>
+                                <b>Salario mensual Establecido:</b>
                             </label>
                         </div>
                         <div class="input-field col s3" style="text-align: right;">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <!--Fin del contenido de la pagina-->
+        
     </form>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
